Add competition / minimal mode

--- a/Sensei.ipynb
+++ b/Sensei.ipynb
@@ -41,22 +41,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<h3>Version Information</h3><table><tr><th>Qiskit Software</th><th>Version</th></tr><tr><td>Qiskit</td><td>0.19.1</td></tr><tr><td>Terra</td><td>0.14.1</td></tr><tr><td>Aer</td><td>0.5.1</td></tr><tr><td>Ignis</td><td>0.3.0</td></tr><tr><td>Aqua</td><td>0.7.0</td></tr><tr><td>IBM Q Provider</td><td>0.7.0</td></tr><tr><th>System information</th></tr><tr><td>Python</td><td>3.8.1 (tags/v3.8.1:1b293b6, Dec 18 2019, 23:11:46) [MSC v.1916 64 bit (AMD64)]</td></tr><tr><td>OS</td><td>Windows</td></tr><tr><td>CPUs</td><td>6</td></tr><tr><td>Memory (Gb)</td><td>15.90243148803711</td></tr><tr><td colspan='2'>Tue May 19 11:46:14 2020 Pacific Daylight Time</td></tr></table>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%qiskit_version_table"
+    "#%qiskit_version_table"
    ]
   },
   {
@@ -328,22 +315,29 @@
    "outputs": [],
    "source": [
     "class Sensei:\n",
-    "    def __init__(self, seed, stage=0, gate_set=None):\n",
+    "    def __init__(self, seed, stage=0, gate_set=None, verbosity=1, auto_submit=False):\n",
     "        self.__seed = seed\n",
     "        self.__stage = stage\n",
     "        self.__hidden_circ = None\n",
     "        self.__gate_set = gate_set\n",
-    "        print(\"Welcome to the dojo. You have chosen a practice governed by the number '%s'\" % seed)\n",
-    "        print()\n",
-    "        print(\"When you are ready to practice(), prepare to receive a hidden circuit.\")\n",
-    "        print()\n",
-    "        print(\"You can get_empty_circuit() in order to probe the hidden circuit with prepend() or append().\")\n",
-    "        print(\"You can also get_empty_circuit() to replicate the hidden circuit and check() to see how close you are.\")\n",
-    "        print()\n",
-    "        print(\"When you are ready to move to the next stage submit(replicated_circuit) back to me.\")\n",
-    "        print()\n",
+    "        self.__verbosity = verbosity\n",
+    "        self.__auto_submit = auto_submit\n",
+    "        \n",
+    "        if self.__verbosity >= 1:\n",
+    "            print(\"Welcome to the dojo. You have chosen a practice governed by the number '%s'\" % seed)\n",
+    "            print()\n",
+    "            print(\"When you are ready to practice(), prepare to receive a hidden circuit.\")\n",
+    "            print()\n",
+    "            print(\"You can get_empty_circuit() in order to probe the hidden circuit with prepend() or append().\")\n",
+    "            print(\"You can also get_empty_circuit() to replicate the hidden circuit and check() to see how close you are.\")\n",
+    "            print()\n",
+    "            print(\"When you are ready to move to the next stage submit(replicated_circuit) back to me.\")\n",
     "        \n",
     "    def practice(self):\n",
+    "        if self.__auto_submit and self.__hidden_circ is not None \\\n",
+    "            and self.__hidden_circ.__dict__['_HiddenCircuit__unlocked']:\n",
+    "            self.submit(self.__hidden_circ.__dict__['_HiddenCircuit__random_circ'])\n",
+    "            \n",
     "        if self.__hidden_circ is None:\n",
     "            stage = self.__stage\n",
     "            # epochs increase with qubit first, then verification levels, and then depth\n",
@@ -389,7 +383,8 @@
     "                    \n",
     "            print(\"Stage %s: %s qubit(s), circuit depth %s, verification level %s\" % (stage, num_qubits, depth, level))\n",
     "            print(\"Using gate set: %s\" % gate_set)\n",
-    "            print(\"%s [must reach this to move on]\" % get_verification_level_text(level))\n",
+    "            if self.__verbosity >= 1:\n",
+    "                print(\"%s [must reach this to move on]\" % get_verification_level_text(level))\n",
     "            random.seed(self.__seed + stage)\n",
     "            self.__hidden_circ = HiddenCircuit(num_qubits, depth=depth, gate_set=gate_set, level=level)\n",
     "            return self.__hidden_circ\n",
@@ -399,15 +394,23 @@
     "        \n",
     "    def submit(self, solution_circ):\n",
     "        if self.__hidden_circ is not None:\n",
-    "            correct = check_circuit(self.__hidden_circ.__dict__['_HiddenCircuit__random_circ'], \\\n",
-    "                                    solution_circ, self.__hidden_circ.__dict__['_HiddenCircuit__level'], log=False)\n",
-    "            if correct:\n",
-    "                print(\"Well done. You are ready for more practice().\")\n",
+    "            show_output = True\n",
+    "            \n",
+    "            rc = self.__hidden_circ.__dict__['_HiddenCircuit__random_circ']\n",
+    "            if self.__auto_submit and solution_circ == rc:\n",
+    "                correct = True\n",
+    "                show_output = False\n",
+    "            else:\n",
+    "                correct = check_circuit(rc, solution_circ, self.__hidden_circ.__dict__['_HiddenCircuit__level'], log=False)\n",
+    "            if correct:              \n",
+    "                if show_output:\n",
+    "                    print(\"Well done. You are ready for more practice().\")\n",
     "                self.__stage = self.__stage + 1\n",
     "                self.__hidden_circ = None\n",
     "                return\n",
     "            else:\n",
-    "                print(\"You are not ready for more practice(). Submit again when you have proven yourself.\")\n",
+    "                if show_output:\n",
+    "                    print(\"You are not ready for more practice(). Submit again when you have proven yourself.\")\n",
     "                return\n",
     "        else:\n",
     "            print(\"You must practice() first before submitting.\")\n",
