--- a/Dojo.ipynb
+++ b/Dojo.ipynb
@@ -11,6 +11,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![](qid.png)\n",
+    "\n",
     "> \"A dōjō is a hall or place for immersive learning or meditation. This is traditionally in the field of martial arts, but has been seen increasingly in other fields, such as meditation and software development. The term literally means \"place of the Way\" in Japanese.\" -Wikipedia"
    ]
   },
