Streamline Compete notebook further

--- a/Compete.ipynb
+++ b/Compete.ipynb
@@ -29,7 +29,7 @@
    },
    "outputs": [],
    "source": [
-    "sensei = Sensei(42, stage=0, verbosity=0, auto_submit=True) # things get hard around stage 13"
+    "sensei = Sensei(42, stage=17, verbosity=0, auto_submit=True) # things get hard around stage 13"
    ]
   },
   {
@@ -44,25 +44,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "c = hc.get_empty_circuit()\n",
-    "# Replicate the hidden circuit here\n",
-    "c.x(0)\n",
-    "hc.check(c)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "_Moved circuit probing here so the loop between practice and submission is tighter_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -70,28 +51,10 @@
    "source": [
     "c = hc.get_empty_circuit()\n",
     "# Add your gates here \n",
-    "\n",
-    "hc.prepend(c, plot_fn=plot_bloch_multivector)"
+    "#hc.prepend(c, plot_fn=plot_bloch_multivector) # add gates before the hidden circuit to probe\n",
+    "hc.append(c, plot_fn=plot_bloch_multivector) # add gates after the hidden circuit to 'uncompute'\n",
+    "#hc.check(c) # check replicated circuit against the hidden circuit to see if they match"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "c = hc.get_empty_circuit()\n",
-    "# Add your gates here\n",
-    "\n",
-    "hc.append(c, plot_fn=plot_bloch_multivector)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
