Always display plot_fn with prepend/append() if check() is also used.

--- a/Sensei.ipynb
+++ b/Sensei.ipynb
@@ -292,11 +292,13 @@
     "\n",
     "    def prepend(self, append_circ, plot_fn=plot_bloch_multivector):\n",
     "        sv = run_statevector(append_circ.combine(self.__random_circ))\n",
-    "        return plot_fn(sv)\n",
+    "        display(plot_fn(sv))\n",
+    "        return\n",
     "    \n",
     "    def append(self, append_circ, plot_fn=plot_bloch_multivector):\n",
     "        sv = run_statevector(self.__random_circ.combine(append_circ))\n",
-    "        return plot_fn(sv)\n",
+    "        display(plot_fn(sv))\n",
+    "        return\n",
     "    \n",
     "    def __str__(self):\n",
     "        if self.__unlocked:\n",
